Causeview Package Complete/ant script/retrieveUnpackaged/objects/aNums__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Causeview auto number format for constituent IDs</description>
    <fields>
        <fullName>ContactCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ContactCount(DEP)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactLength__c</fullName>
        <defaultValue>8</defaultValue>
        <label>ContactLength</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContactPrefix__c</fullName>
        <defaultValue>TEXT(1)</defaultValue>
        <label>ContactPrefix</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>OrgCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgLength__c</fullName>
        <defaultValue>8</defaultValue>
        <label>OrgLength</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrgPrefix__c</fullName>
        <defaultValue>TEXT(1)</defaultValue>
        <label>OrgPrefix</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Auto Number Counts</label>
</CustomObject>